# esp32_laneproject_train_pc

./: README_KO.md  export_onnx.py  image_test.py  merge_manifests.py  prepare_datasets.py  quantize_espdl.py  requirements.txt  run_pipeline.sh  train_lanenet.py  webcam_test.py  webcam_test_2.py
esp32_s3/: CMakeLists.txt  README_ESP32_KO.md  sdkconfig.defaults
esp32_s3/main/: CMakeLists.txt  app_main.cpp  camera_pins.h  idf_component.yml
esp32_s3/main/models/: README.txt  lane_s3_tusimple_160x96.espdl
lane_project/data/: lane_dataset.py
lane_project/models/: tiny_lane_net.py
lane_project/utils/: metrics.py  vision.py
prepared_data/: tusimple_stats.json
prepared_data/manifests/: tusimple_train.jsonl  tusimple_val.jsonl
runs/: unet_depthwise_small_best.pt
runs/tusimple_96x64/: best.pt  history.json  lane_s3_tusimple_96x64.espdl  lane_s3_tusimple_96x64.info  lane_s3_tusimple_96x64.json  lane_s3_tusimple_96x64.onnx  last.pt  meta.json
runs/tusimple_only/: best.pt  history.json  lane_s3_tusimple_160x96.info  lane_s3_tusimple_160x96.json  lane_s3_tusimple_160x96.onnx  last.pt  meta.json
